# poly

./: QUICK_REFERENCE.md  README.md  demo.py  fetch_asset_ids.py  polymarket_clob_monitor.py  requirements.txt  setup.sh  stop_monitor.sh  strategy_example.py  test_connection.py  test_monitor.sh
arbitrage_monitor/: .env.example  .gitignore  Cargo.toml  README.md
arbitrage_monitor/src/: arbitrage.rs  main.rs
arbitrage_monitor/src/kalshi/: auth.rs  client.rs  mod.rs
arbitrage_monitor/src/polymarket/: client.rs  mod.rs  slug.rs
kalshi_monitor/: .env.example  .gitignore  Cargo.toml  QUICK_START.md  README.md  RUST_SETUP_GUIDE.md  WALKTHROUGH.md  debug.sh  find_lol_markets.py  find_lol_markets.sh  run.sh  switch_market.sh
kalshi_monitor/src/: main.rs
polymarket_monitor/: README.md  polymarket_clob_monitor.py  run_monitor.sh
