[package]
name = "arbitrage_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for Kalshi REST API
reqwest = { version = "0.11", features = ["json"] }

# WebSocket for Polymarket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# JSON serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Environment variables
dotenv = "0.15"
strsim = "0.11"

# Terminal colors
colored = "2"

# Date/time
chrono = "0.4"

# RSA authentication for Kalshi
rsa = "0.9"
sha2 = "0.10"
base64 = "0.21"
pkcs8 = { version = "0.10", features = ["pem"] }
rand = "0.8"
